--- a/project-02-v2-starter-code.ipynb
+++ b/project-02-v2-starter-code.ipynb
@@ -924,7 +924,8 @@
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>Question:</b> Explain your rationale for the choices on the chart\n",
     "<br/>\n",
-    "<b>Answer:</b> For states with low participation rate, we want to find out whether this affects the accuracy of the scores. "
+    "<b>Answer:</b> For states with low participation rate, we want to find out whether this affects the accuracy of the scores. \n",
+    "</div>"
    ]
   },
   {
@@ -960,73 +961,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>State</th>\n",
-       "      <th>Rate</th>\n",
-       "      <th>Verbal</th>\n",
-       "      <th>Math</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>CO</td>\n",
-       "      <td>31</td>\n",
-       "      <td>539</td>\n",
-       "      <td>542</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>OH</td>\n",
-       "      <td>26</td>\n",
-       "      <td>534</td>\n",
-       "      <td>439</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>MT</td>\n",
-       "      <td>23</td>\n",
-       "      <td>539</td>\n",
-       "      <td>539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>ID</td>\n",
-       "      <td>17</td>\n",
-       "      <td>543</td>\n",
-       "      <td>542</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>TN</td>\n",
-       "      <td>13</td>\n",
-       "      <td>562</td>\n",
-       "      <td>553</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24 states are above the mean.\n"
+     "ename": "NameError",
+     "evalue": "name 'df_sat_scores_csv' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-cf0b5fd190c9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcondition_mean\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf_sat_scores_csv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Verbal'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_sat_scores_csv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Verbal'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mstates_higher_than_mean\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf_sat_scores_csv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcondition_mean\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mqf_print\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstates_higher_than_mean\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'{n_states} states are above the mean.'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_states\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstates_higher_than_mean\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_sat_scores_csv' is not defined"
      ]
     }
    ],
@@ -1045,7 +991,8 @@
     "<b>Question:</b> What does this tell you about the distribution of Verbal scores?\n",
     "\n",
     "<br/>\n",
-    "<b>Answer:</b> Given that the total number of states is 52, the data is slightly skewed to the right (tail on the right). "
+    "<b>Answer:</b> Given that the total number of states is 52, the data is slightly skewed to the right (tail on the right). \n",
+    "</div>"
    ]
   },
   {
@@ -1771,7 +1718,8 @@
     "<i>25%</i> returns 25th percentile of all non-null values for the column. <br/>\n",
     "<i>50%</i> returns median of all non-null values for the column. <br/>\n",
     "<i>75%</i> returns 75th percentile of all non-null values for the column. <br/>\n",
-    "<i>max</i> returns maximum non-null values for the column. <br/>\n"
+    "<i>max</i> returns maximum non-null values for the column. <br/>\n",
+    "</div>\n"
    ]
   },
   {
@@ -1893,7 +1841,8 @@
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>Question:</b> Describe how the covariance matrix is different from the correlation matrix.\n",
     "<br/>\n",
-    "<b>Answer:</b>Correlation matrix is the normalised form of a convariance matrix."
+    "<b>Answer:</b>Correlation matrix is the normalised form of a convariance matrix.\n",
+    "</div>"
    ]
   },
   {
@@ -1990,7 +1939,8 @@
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>Question:</b> What is the process to convert the covariance into the correlation?\n",
     "<br/>\n",
-    "<b>Answer:</b> By dividing the covariance values by standard deviation of x * standard deviation of y, we get its correlation. The code block above shows the transformation of a covariance matrix to a correlation matrix."
+    "<b>Answer:</b> By dividing the covariance values by standard deviation of x * standard deviation of y, we get its correlation. The code block above shows the transformation of a covariance matrix to a correlation matrix.\n",
+    "</div>"
    ]
   },
   {
