underline to highlight insight

--- a/project-02-v2-starter-code.ipynb
+++ b/project-02-v2-starter-code.ipynb
@@ -3429,7 +3429,7 @@
    "metadata": {},
    "source": [
     "<div class = 'alert alert-info'>\n",
-    "<b>Report</b><br/><li>Hypothesis 1: At least one substance is substitutes of another substance. <br/>Results: The hypothesis was true, as pain-releiver-use and oxycontin-use are highly correlated (0.98) with each other. According to https://www.omicsonline.org/open-access/oxytocin-a-new-painkiller-2167-0846-S4-001.php?aid=81484, it also show oxycontin as a substitute for pain-releiver.  </li> <li>Hypothesis 2: Use of drugs depend on age group generation<br/>Results: With a significance level of alpha = 0.01, the null hypothesis was rejected. There is statistical difference between young and middle age adults (p = 1.06*10<sup>-99</sup>), and there is also statistical difference between middle age and older adults (p = 3.61*10<sup>-21</sup>)</li></div>"
+    "<b>Report</b><br/><li>Hypothesis 1: <u>At least one substance is a substitute of another substance</u> <br/>Results: The hypothesis was true, as pain-releiver-use and oxycontin-use are highly correlated (0.98) with each other. According to https://www.omicsonline.org/open-access/oxytocin-a-new-painkiller-2167-0846-S4-001.php?aid=81484, it also show oxycontin as a substitute for pain-releiver.  </li> <li>Hypothesis 2: <u>Use of drugs depend on age group generation</u><br/>Results: With a significance level of alpha = 0.01, the null hypothesis was rejected. There is statistical difference between young and middle age adults (p = 1.06*10<sup>-99</sup>), and there is also statistical difference between middle age and older adults (p = 3.61*10<sup>-21</sup>)</li></div>"
    ]
   },
   {
