test html tag 2

--- a/project-02-v2-starter-code.ipynb
+++ b/project-02-v2-starter-code.ipynb
@@ -4118,6 +4118,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## testing out html tags"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<b><span style=\"background-color:rgba(0, 255,0, 0.3);font-size:200%\" > Observations </span></b>"
    ]
   },
@@ -4125,7 +4132,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b><span style=\"background-color:rgba(0, 255,0, 0.3);font-size:200%\"> Observations </span></b>"
+    "<span style=\"background-color:rgba(0, 255,0, 0.3);font-size:200%\"> <b>Observations </b></span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:rgba(0, 255,0, 0.3);font-size:200%\">Observations</div>"
    ]
   },
   {
